<resources>
    <string name="app_name">QuickFitness</string>
    <string name="hello_world">Main Fragment</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="menu_do_exercise">Do Exercise</string>
    <string name="menu_edit_profile">Edit Info</string>
    <string name="menu_new_workout">New Workout</string>
    <string name="menu_save_workout">Save</string>
    <string name="menu_workout_next">Next</string>
    <string name="menu_start_workout">Start</string>
    <string name="workouts_list_empty">No workouts to display.</string>
    <string name="exercises_by_workout_list_empty">No Exercises to display.</string>
    <string name="exercises_by_workout_label">Workout Exercises</string>
    <string name="action_delete">Delete</string>
    <string name="action_skip">Skip</string>
    <string name="exercise_details">Exercise Details</string>
    <string name="exercise_details_level">Level:</string>
    <string name="exercise_details_duration">Duration: </string>
    <string name="exercise_details_calories">Calories: </string>
    <string name="list_drawer_item_home">Home</string>
    <string name="list_drawer_item_set_goal">Select An Exercise</string>
    <string name="list_drawer_item_workouts">Workout Sets</string>
    <string name="list_drawer_item_profile">Profile</string>
    <string name="list_drawer_item_statistics">Statistics</string>
    <string name="list_drawer_item_settings">Settings</string>
    <string name="list_drawer_item_log_out">Logout</string>
    <string name="list_drawer_item_help">Help</string>
    <string name="drawer_item_icon_content_desc">Item Drawer Icon</string>
    <string name="drawer_set_user_picture_content_desc">Set User Picture</string>
    <string name="drawer_header_image_content_desc">Header Image on Drawer</string>
    <string name="spinner_categories_tag_content_desc">Spinner Item Tag</string>
    <string name="cards_list_img_content_description">Exercise Image</string>
    <string name="drawer_txt_user_name">Josh</string>
    <string name="fragment_one_text">Main Content</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="greetings">Hi! Welcome to Quickfitness</string>
    <string name="category_all">Select A Goal</string>
    <string name="category_cardio">Improve Cardio</string>
    <string name="category_endurance">Improve Endurance</string>
    <string name="category_strength">Increase Strength</string>
    <string name="category_weight_loss">Lose Weight</string>
    <string name="workout_status_start">Start</string>
    <string name="workout_status_doing">Doing</string>
    <string name="workout_status_stopped">Stopped</string>
    <string name="workout_status_finished">Finished</string>
    <string name="weight_loss_exercise_title_cycling">Cycling</string>
    <string name="weight_loss_exercise_title_treadmill_rounds">Treadmill Rounds</string>
    <string name="weight_loss_exercise_title_jumping_rope">Jumping Rope</string>
    <string name="weight_loss_exercise_description_cycling">Bicycling is another low-impact, high-rewards activity for losing weight.
    Cycling can burn anywhere from 372 to over 1,100 calories per hour, depending on your weight, your speed and the terrain you’re biking across.</string>
    <string name="weight_loss_exercise_description_treadmill_rounds">Treadmill rounds utilize the treadmill to get the heart rate up, followed by floor exercises that include plenty of resistance training to strengthen muscle and increase metabolism to help you burn more fat throughout the day</string>
    <string name="weight_loss_exercise_description_jumping_rope">Jumping rope is a favorite activity on playgrounds across the country, but it’s hardly child’s play when it comes to losing weight.
    Just ten minutes of rope jumping is worth an eight-minute mile when it comes to cardio benefits and calorie burning.
    An hour of jumping rope burns over 800 calories and works the arms, legs, and core, as well as strengthens bones and joints.
    </string>
    <string name="weight_loss_exercise_level_cycling">Beginner</string>
    <string name="weight_loss_exercise_level_treadmill_rounds">Beginner</string>
    <string name="weight_loss_exercise_level_jumping_rope">Intermediate</string>
    <string name="strength_exercise_title_globet_squat">Globet Squat</string>
    <string name="strength_exercise_title_pallof_press"> Pallof Press</string>
    <string name="strength_exercise_title_dumbbell_row">Dumbbell Row</string>
    <string name="strength_exercise_description_globet_squat">Squats are an exercise many people struggle to perform safely and effectively. Luckily, the goblet squat is a great progression from a bodyweight squat before squatting with a bar. Because the load is held in front, the core works double-time to keep you tall, while your legs work to control your movement down and stand back up.</string>
    <string name="strength_exercise_description_pallof_press">The Pallof press is one of those movements that looks confusing, but is actually incredibly simple and beneficial, says Mike Campbell, personal trainer and owner of Unleash Your Alpha. While you may not be hoisting heavy weight, the real challenge lies in resisting movement — in this case, rotation</string>
    <string name="strength_exercise_description_dumbbell_row">Most of us spend more time training the mirror muscles on the front of the body, and neglect what we can’t see, according to Campbell. But developing a strong back is key to balance things out, improve posture and avoid injury. The dumbbell row can help achieve all that, in addition building strong arms and a strong core</string>
    <string name="strength_exercise_level_globet_squat">Beginner</string>
    <string name="strength_exercise_level_pallof_pres">Intermediate</string>
    <string name="strength_exercise_level_dumbbell_row">Intermediate</string>
    <string name="cardio_exercise_title_elliptical">Elliptical Machines</string>
    <string name="cardio_exercise_title_stationary_bike">Stationary Bikes</string>
    <string name="cardio_exercise_title_rowing">Rowing Machines</string>
    <string name="cardio_exercise_description_elliptical">These machines pack a little less punch on the joints, and either can be a good alternative to the treadmill.
     Because you use them in a standing position, you are using lots of muscle mass, so the calorie burn rate is still pretty high.</string>
    <string name="cardio_exercise_description_stationary_bike">All our experts agree that the stationary bike offers the workout with the least impact on the joints. People with knee pain are often steered toward these bikes, since the impact of body weight is not a concern as it is on a treadmill, elliptical trainer, or stair stepper</string>
    <string name="cardio_exercise_description_rowing">Don’t be fooled into thinking this machine gives you only an upper-body workout. Rowers are more advanced cardiovascular machines. Because you must push with the legs while you pull with the arms, rowers require coordination. They also you require you to engage your core abdominal muscles to support and protect your back.</string>
    <string name="cardio_exercise_level_elliptical">Beginner</string>
    <string name="cardio_exercise_level_stationary_bike">Beginner</string>
    <string name="cardio_exercise_level_rowing">Beginner</string>
    <string name="endurance_exercise_title_swimming_laps">Swimming Laps</string>
    <string name="endurance_exercise_title_stair_machines">Stair Machines</string>
    <string name="endurance_exercise_title_push_ups">Push-ups</string>
    <string name="endurance_exercise_description_swimming_laps">The overall goal of the Beginner Swimming Workouts is to build up to a level where the workouts will improve and maintain fitness goals. The 2 overriding challenges are to build up endurance so you can swim continuously without stopping, and to improve strokes and breathing through drills.</string>
    <string name="endurance_exercise_description_stair_machines">Stair machines elevate your rate up by duplicating the motion of climbing up stairs. Although this is an excellent choice for cardiovascular endurance training, it might not be the best choice for a beginner or those with bad knees. The stair machine focuses on your lower body while your upper body tries not to hold on for dear life.</string>
    <string name="endurance_exercise_description_push_ups">The beauty of the push-up is that you can do it anywhere, anytime. It is a great all-encompassing exercise that hits not only your arms and chest but also gets a burn going in your core. The only downside is that busting out the same old up-and-down routine day after day can start to feel tedious.</string>
    <string name="endurance_exercise_level_swimming_laps">Beginner</string>
    <string name="endurance_exercise_level_stair_machines">Intermediate</string>
    <string name="endurance_exercise_level_push_ups">Beginner</string>
    <string name="title_activity_exercise_details">ExerciseDetailsActivity</string>
    <string name="title_activity_activity_add_workout">New Workout</string>
    <string name="title_activity_activity_statistics">Graphs</string>
    <string name="title_activity_activity_intro">Intro</string>
    <string name="title_activity_activity_sign_up_user">Sign up</string>
    <string name="txt_upload_picture">Upload Picture</string>
    <string name="edt_name">Full Name</string>
    <string name="radio_male">Male</string>
    <string name="txt_radio_female">Female</string>
    <string name="txt_btn_create_account">Create Account</string>
    <string name="edt_age">Age</string>
    <string name="txt_genre">Genre</string>
    <string name="txt_user_image">user_image</string>
    <string name="txt_skip_intro">Skip</string>
    <string name="txt_sign_up_intro">Sign up</string>
    <string name="txt_login_intro">Login</string>
    <string name="txt_password_intro">Password</string>
    <string name="txt_username_intro">Username</string>
    <string name="txt_app_name_intro">QuickFitness</string>
    <string name="txt_email_intro">Email</string>
    <string name="txt_card_current_workout">Current Workout</string>
    <string name="txt_card_recent_activity">Recent Activity</string>
    <string name="txt_workout_categories">Workout Categories</string>
    <string name="txt_button_status">Stats</string>
    <string name="txt_circle_status">circle_status</string>
    <string name="txt_status">Status</string>
    <string name="text_user_profile_info">Body Info</string>
    <string name="txt_bf_indicator">BF</string>
    <string name="txt_bmi_indicator">BMI</string>
    <string name="txt_profile_workout_stats">Active Workout</string>
    <string name="txt_profile_full_stats">See Stats</string>
    <string name="txt_profile_user_image">profile_user_image</string>
    <string name="txt_enter_body_info">Enter Body Information</string>
    <string name="txt_body_info_height">Height in (meters)</string>
    <string name="txt_body_info_weight">Weight in (kg)</string>
    <string name="txt_create_workout">Create a new workout</string>
    <string name="txt_hint_workout_name">Workout Name</string>
    <string name="txt_times_per_week">Times per week</string>
    <string name="txt_workout_duration">Duration</string>
    <string name="txt_set_time_hint">Set Time</string>
    <string name="txt_body_height">Height</string>
    <string name="txt_body_weight">Weight</string>
    <string name="txt_card_no_data_available">No data Available</string>
    <string name="txt_workout_duration_clock">workout_duration_clock_image</string>
    <string name="txt_profile_male">Male</string>
    <string name="txt_profile_female">Female</string>
</resources>