<!--
  ~ /*
  ~  * Copyright (C) 2014 The Android Open Source Project
  ~  *
  ~  * Licensed under the Apache License, Version 2.0 (the "License");
  ~  * you may not use this file except in compliance with the License.
  ~  * You may obtain a copy of the License at
  ~  *
  ~  *      http://www.apache.org/licenses/LICENSE-2.0
  ~  *
  ~  * Unless required by applicable law or agreed to in writing, software
  ~  * distributed under the License is distributed on an "AS IS" BASIS,
  ~  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  * See the License for the specific language governing permissions and
  ~  * limitations under the License.
  ~  */
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        tools:context="pace.cs389.team2.quickfitness.ActivityAddWorkout$PlaceholderFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="bottom"
            android:paddingBottom="5dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:text="@string/txt_create_workout"
            android:textColor="@color/text_color_dark_grey"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/edt_set_workout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-condensed"
            android:hint="@string/txt_hint_workout_name"
            android:inputType="textCapWords"
            android:textColorHint="@color/text_color_lighter_grey"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edt_set_workout_days"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/txt_times_per_week"
                android:onClick="promptSetDaysDialog"
                android:textColorHint="@color/text_color_lighter_grey"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edt_set_workout_duration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/txt_workout_duration"
                android:onClick="promptSetDurationDialog"
                android:textColorHint="@color/text_color_lighter_grey"
                android:textSize="20sp" />

        </LinearLayout>


        <EditText
            android:id="@+id/edt_set_workout_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-condensed"
            android:hint="@string/txt_set_time_hint"
            android:onClick="promptSetTimeDialog"
            android:textColorHint="@color/text_color_lighter_grey"
            android:textSize="20sp" />
    </LinearLayout>
</ScrollView>