<!--
  ~ /*
  ~  * Copyright (C) 2014 The Android Open Source Project
  ~  *
  ~  * Licensed under the Apache License, Version 2.0 (the "License");
  ~  * you may not use this file except in compliance with the License.
  ~  * You may obtain a copy of the License at
  ~  *
  ~  *      http://www.apache.org/licenses/LICENSE-2.0
  ~  *
  ~  * Unless required by applicable law or agreed to in writing, software
  ~  * distributed under the License is distributed on an "AS IS" BASIS,
  ~  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  * See the License for the specific language governing permissions and
  ~  * limitations under the License.
  ~  */
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"

    tools:context="pace.cs389.team2.quickfitness.ActivityAddWorkout$PlaceholderFragment">

    <TextView
        android:text="@string/txt_enter_body_info"
        android:textSize="25sp"
        android:fontFamily="sans-serif-condensed"
        android:layout_width="match_parent"
        android:textColor="@color/text_color_dark_grey"
        android:gravity="bottom"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp"
        android:layout_height="80dp" />

    <EditText
        android:id="@+id/edt_body_height"
        android:textColorHint="@color/text_color_lighter_grey"
        android:layout_marginTop="20dp"
        android:inputType="numberDecimal"
        android:layout_marginStart="10dp"
        android:hint="@string/txt_body_info_height"
        android:fontFamily="sans-serif-condensed"
        android:textSize="20sp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edt_body_weight"
        android:inputType="numberDecimal"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/text_color_lighter_grey"
        android:layout_marginStart="10dp"
        android:hint="@string/txt_body_info_weight"
        android:fontFamily="sans-serif-condensed"
        android:textSize="20sp"
        android:onClick="promptSetTimeDialog"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_body_bf"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:textColorHint="@color/text_color_lighter_grey"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:textSize="20sp"
            android:onClick="promptSetDaysDialog"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txt_body_bmi"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:fontFamily="sans-serif-condensed"
            android:textSize="20sp"
            android:layout_weight="1"
            android:textColorHint="@color/text_color_lighter_grey"
            android:onClick="promptSetDurationDialog"
            android:layout_marginEnd="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>


</LinearLayout>
