<!--
  ~ /*
  ~  * Copyright (C) 2014 The Android Open Source Project
  ~  *
  ~  * Licensed under the Apache License, Version 2.0 (the "License");
  ~  * you may not use this file except in compliance with the License.
  ~  * You may obtain a copy of the License at
  ~  *
  ~  *      http://www.apache.org/licenses/LICENSE-2.0
  ~  *
  ~  * Unless required by applicable law or agreed to in writing, software
  ~  * distributed under the License is distributed on an "AS IS" BASIS,
  ~  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  * See the License for the specific language governing permissions and
  ~  * limitations under the License.
  ~  */
  -->

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/background_light_gray"
        tools:context=".MainActivity$PlaceholderFragment">

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/card_recent_activity"
            android:layout_marginStart="10dp"
            android:background="#fff"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            card_view:cardCornerRadius="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_card_recent_activity"
                    android:padding="10dp"
                    android:textColor="@color/background_white"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="20sp"
                    android:background="@color/material_blue_700" />

                <org.eazegraph.lib.charts.PieChart xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/piechart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="8dp"
                    app:egLegendTextSize="18sp"
                    app:egUsePieRotation="true"
                    app:egValueTextSize="36sp" />


            </LinearLayout>
        </android.support.v7.widget.CardView>


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/background_light_gray"
            tools:context=".MainActivity$PlaceholderFragment">


            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/card_current_workout"
                android:layout_marginStart="10dp"
                android:background="#fff"
                android:layout_marginEnd="10dp"
                android:visibility="gone"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_marginBottom="50dp"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_card_current_workout"
                        android:padding="10dp"
                        android:textColor="@color/background_white"
                        android:fontFamily="sans-serif-condensed"
                        android:textSize="20sp"
                        android:background="@color/material_blue_700" />

                    <TextView
                        android:id="@+id/txt_current_workout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_card_current_workout"
                        android:padding="10dp"
                        android:textColor="@color/text_color_dark_grey"
                        android:fontFamily="sans-serif-condensed"
                        android:textSize="20sp" />

                </LinearLayout>


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_button_status"
                    android:layout_marginBottom="-2dp"
                    android:textSize="13sp"
                    android:layout_marginEnd="-2dp"
                    style="?android:attr/borderlessButtonStyle"
                    android:textColor="@color/material_blue_700"
                    android:layout_gravity="bottom|end" />


            </android.support.v7.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="250dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_workout_categories"
                    android:paddingTop="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="5dp"
                    android:textSize="20sp"
                    android:textColor="@color/text_color_dark_grey" />

                <include layout="@layout/activity_list_exercises" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>


